[package]
name = "abjad"
version = "0.5.0"
authors = ["Theo Beers <theo.beers@fu-berlin.de>"]
edition = "2021"
categories = ["internationalization", "text-processing"]
description = "Calculate the numerical abjad value of Arabic-script text"
homepage = "https://github.com/theodore-s-beers/abjad-rs"
keywords = ["Arabic", "Persian", "abjad", "numerology"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/theodore-s-beers/abjad-rs"

[dependencies]
thiserror = "1.0.40"
